--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
   </a>
   <a class="hover-box" href="#">
     <img src="images/black.jpg" alt="">
-    <h2>black butterflies</h2>
+    <h2>Black butterflies</h2>
   </a>
   <a class="hover-box" href="#">
     <img src="images/blue.jpg" alt="">
-    <h2>blue butterflies</h2>
+    <h2>Blue butterflies</h2>
   </a>
   <a class="hover-box" href="#">
     <img src="images/yellow.jpg" alt="">
-    <h2>yellow butterflies</h2>
+    <h2>Yellow butterflies</h2>
   </a>
 </section>
 
